syntax = "proto3";

package hero2;

service HeroesService2 {
  rpc FindTwo(HeroById) returns (Hero) {}
}

message HeroById { int32 id = 1; }

message Hero {
  int32 id = 1;
  string name = 2;
}